<resources>
    <string name="app_name">My Application</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="last_name">Отчество</string>
    <string name="year">Год</string>
    <string name="school">Школа</string>
    <string name="city">Город</string>
    <string name="experience">Опыт программирования</string>
    <string name="bool">Знание языков программирования</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiple">*</string>
    <string name="divide">/</string>
</resources>